# bubblify

./: .dockerignore  .gitignore  Dockerfile  README-Docker.md  README.md  docker-compose.yml  hello.py  pyproject.toml  test_spherization.yml
assets/xarm6/: xarm6_dual_rs.urdf  xarm6_dual_rs_spherized.urdf  xarm6_dual_rs_spherized.yml  xarm6_rs.urdf  xarm6_rs_spherized.urdf  xarm6_rs_spherized.yml
bubblify/: __init__.py  cli.py  core.py  gui.py
scratch/: bubblify_mwe.py
tests/: test_base_link_fix.py  test_bubblify.py  test_custom_urdf_export.py  test_export_fixes.py  test_final_gui_improvements.py  test_gui_export.py  test_gui_final.py  test_gui_improvements.py  test_latest_improvements.py  test_mesh_visibility_fix.py  test_multiple_robots.py  test_new_visibility_system.py  test_opacity_system.py  test_real_robot_urdf_export.py  test_urdf_export_improvements.py
